<resources>
    <string name="app_name">Orange</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_into_continue">Sign in to continue</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="network_msg">No network connection</string>
    <string name="hair_space">&#x200A;</string>
    <string name="menu_home">Home</string>
    <string name="menu_property">All Properties</string>
    <string name="menu_latest">Latest</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_about">About Us</string>
    <string name="menu_rate_app">Rate App</string>
    <string name="menu_share_app">Share App</string>
    <string name="menu_more_app">More App</string>
    <string name="menu_search">Search</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_login">Login</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_add_properties">Add Properties</string>
    <string name="menu_my_properties">My Register</string>
    <string name="notification_title">Enable Push Notification</string>
    <string name="no_item_found">No Item Found</string>
    <string name="you_may">You may also like</string>
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="name_login">Name</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="phone_login">Phone</string>
    <string name="address_title">Address</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="loading_title">Loading..</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="no_account">Don\'t Have an Account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="already_account">Already Have an Account? </string>
    <string name="enter_city">Enter City</string>
    <string name="enter_address">Enter Address</string>
    <string name="submit">Submit</string>
    <string name="remember_me">Remember Me</string>
    <string name="send">Send</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="forgot_description">Enter your email address below and  we\'ll send you email with password</string>
    <string name="button_text_forgot_password">Forgot your password?</string>
    <string name="profile_name_lbl">Name :- </string>
    <string name="profile_email_lbl">Email :- </string>
    <string name="profile_phone_lbl">Phone :- </string>
    <string name="address_lbl">Address :- </string>
    <string name="profile_password_lbl">Password :- </string>
    <string name="detail_fur">Furnished</string>
    <string name="detail_semi">Semi-Furnished</string>
    <string name="detail_un_semi">Unfurnished</string>
    <string name="detail_very">Verified</string>
    <string name="detail_un_very">Non Verified</string>
    <string name="advance_filter_title">Advance Property Filter</string>
    <string name="filter_recommended">Recommended Filter</string>
    <string name="filter_recommended_very">Verified Properties</string>
    <string name="filter_recommended_non_very">Non Verified Properties</string>
    <string name="filter_price">Price</string>
    <string name="filter_price_min">Min:- </string>
    <string name="filter_price_max">Max:- </string>
    <string name="filter_furnishing">Furnishing</string>
    <string name="filter_furnishing_fur">Furnished</string>
    <string name="filter_furnishing_semi">Semi-Furnished</string>
    <string name="filter_furnishing_un_fur">Unfurnished</string>
    <string name="filter_type_properties">Property Type</string>
    <string name="filter_bed">BedRoom</string>
    <string name="filter_apply">Apply</string>
    <string name="max_value">Max :-</string>
    <string name="min_value">Min :-</string>
    <string name="max_value_price">100</string>
    <string name="min_value_price">500000000</string>
    <string name="currency_symbol">$</string>
    <string name="choose_one_type">Choose type atleast one</string>
    <string name="sort_by_title">Sort By</string>
    <string name="sort_by_distance">Distance</string>
    <string name="sort_by_law">Price :- High to Low</string>
    <string name="sort_by_all">All Properties</string>
    <string name="sort_by_high">Price :- Low to High</string>
    <string name="sort_by_latest">Latest</string>
    <string name="sort_by_popular">Popular</string>
    <string name="location_permission">Location permission is required to find properties near you, without that you will not get optimal results</string>
    <string name="opps">Opps.</string>
    <string name="dialog_error">Error..</string>
    <string name="dialog_warning">Warning..</string>
    <string name="dialog_success">Success</string>
    <string name="dialog_ok">OK</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="dialog_logout">Logout</string>
    <string name="dialog_no">NO</string>
    <string name="restart_msg">Please restart your app something went to wrong</string>
    <string name="license_msg">You are using invalid License or Package name is already in use, for more information contact us: info@viaviweb.com or viaviwebtech@gmail.com</string>
    <string name="conne_msg1">No Network Connection!!!</string>
    <string name="conne_msg2">Please connect to working Internet connection</string>
    <string name="nodata">No Data Found</string>
    <string name="update">Update</string>
    <string name="share_msg">Hi,I would like to share Application which is used to find real estate around you free please download it from Google Play Store Free Here \n https://play.google.com/store/apps/details?id=</string>
    <string name="login_msg">You need to login first</string>
    <string name="favourite_add">Favourite has been saved</string>
    <string name="favourite_remove">Favourite has been removed</string>
    <string name="home_latest">Latest</string>
    <string name="home_premium">Premium Property</string>
    <string name="featured">Popular</string>
    <string name="more">View All</string>
    <string name="text_no_item">No item available.</string>
    <string name="tag_line">Find Real Estate</string>
    <string name="exit">Exit</string>
    <string name="exit_msg">Are You Sure You Want To Quit?</string>
    <string name="property_desc">Property Description</string>
    <string name="property_amenities">Amenities</string>
    <string name="property_floor_plan">Floor Plan</string>
    <string name="rating">Rating..</string>
    <string name="thank_rating">Thanks for rating</string>
    <string name="bed_bath">Bed</string>
    <string name="bed_bath2">Bath</string>
    <string name="bed_bath3">SF</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="write_here">Write here..</string>
    <string name="search_property">Search Property</string>
    <string name="search_keyword">Enter Locality</string>
    <string name="property_details">Property Details</string>
    <string name="property_gallery">Property Gallery</string>
    <string name="property_location">Location</string>
    <string name="select_category">Select category</string>
    <string name="select_type">Select Purpose Type</string>
    <string name="select_type_home">Select Purpose</string>
    <string name="add_properties_type">Select Category</string>
    <string name="add_properties_purpose">Purpose</string>
    <string name="add_properties_PropertyName">Property Name</string>
    <string name="add_properties_PropertyDescription">Property Description</string>
    <string name="add_properties_Phone">Phone</string>
    <string name="add_properties_Address">Address</string>
    <string name="add_properties_Latitude">Latitude</string>
    <string name="add_properties_Longitude">Longitude</string>
    <string name="add_properties_Bedrooms">Bedrooms</string>
    <string name="add_properties_Bathrooms">Bathrooms</string>
    <string name="add_properties_Area">Area</string>
    <string name="add_properties_Amenities">Amenities</string>
    <string name="add_properties_Price">Price</string>
    <string name="add_properties_FeaturedImage">Featured Image</string>
    <string name="add_properties_FloorPlanImage">Floor Plan Image</string>
    <string name="add_properties_GalleryImage">Gallery Image</string>
    <string name="add_properties_submit">Submit</string>
    <string name="select_image">Select Image</string>
    <string name="facebook">Login with Facebook</string>
    <string name="gmail">Login with Gmail</string>
    <string name="isRTL">false</string>
    <string name="facebook_app_id">xxxxx</string>
    <string name="fb_login_protocol_scheme">fbxxxxx</string>
    <string name="play_more_apps">https://play.google.com/store/apps/dev?id=7157478532572017100</string>
    <string name="privacy_gdpr_url">http://apptific.com/PlayStore/Privacy-Policy.html</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="menu_projects">Projects</string>
    <string name="menu_extra">Extra</string>
    <string name="emailtype"><![CDATA[Marketing & business promotions]]></string>
    <string name="post_your_requirement">Post Your Requirement</string>
    <string name="requirement">Requirement</string>
    <string name="post">Post</string>
    <string name="about_us">About Us</string>
    <string name="create_advertisement">Create Advertisement</string>
    <string name="advertiser">Advertiser</string>
    <string name="editorial_location_no">Editorial Location No.</string>
    <string name="advertisement_type">Advertisement Type:</string>
    <string name="image_video_aspect_ratio">Image/Video \nAspect Ratio:</string>
    <string name="click_to_action_cta_button">Click To Action (CTA)</string>
    <string name="user_number">User Number</string>
    <string name="no_of_days_for_display">No. of Days for Display:</string>
    <string name="browse">Browse</string>
    <string name="sponsored_geo_location">Sponsored Geo Location</string>
    <string name="create_ads">Create Advt.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="active_advt">Active Advt.</string>
    <string name="my_team_members">My Team Members</string>
    <string name="add_team_member">Add Team Member</string>
    <string name="user">User</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="all_active_advertisement">All Active Advertisement</string>
    <string-array name="purpose_array">
        <item>Sale</item>
        <item>Rent</item>
    </string-array>
    <string-array name="property_array">
        <item>Select Property Type</item>
        <item>Rent</item>
    </string-array>
    <string-array name="city_array">
        <item>Select City</item>
        <item>Rent</item>
    </string-array>
    <string-array name="state_array">
        <item>Select State</item>
        <item>Rent</item>
    </string-array>
    <string-array name="fur_array">
        <item>Furnished</item>
        <item>Semi-Furnished</item>
        <item>Unfurnished</item>
    </string-array>
</resources>